unpackaged/main/default/objects/Bypass__c/Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bypass</label>
</CustomObject>