unpackaged/main/default/objects/Bypass__c/fields/ByPass_UpdateOpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>ByPass_UpdateOpportunityStageName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Autorise les utilisateurs à modifier le statut des opportunités SAP CPQ</description>
    <label>ByPass_UpdateOpportunityStageName</label>
    <type>Checkbox</type>
</CustomField>