unpackaged/main/default/objects/Bypass__c/fields/BypassAllTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassAllTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass All Triggers</label>
    <type>Checkbox</type>
</CustomField>