unpackaged/main/default/objects/Bypass__c/fields/BypassTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassTriggers__c</fullName>
    <inlineHelpText>Saisissez les noms des classes que vous voulez désactiver, séparés par un point-virgule.</inlineHelpText>
    <label>Bypass Triggers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>