unpackaged/main/default/objects/Bypass__c/fields/BypassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>