unpackaged/main/default/objects/Bypass__c/fields/BypassWorkflowRules__c.field-meta.xml
<CustomField>
    <fullName>BypassWorkflowRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>