unpackaged/main/default/objects/Bypass__c/fields/OldBypassTriggersValidationRules__c.field-meta.xml
<CustomField>
    <fullName>OldBypassTriggersValidationRules__c</fullName>
    <label>TECHOld Bypass Triggers Validation Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>