unpackaged/main/default/objects/Bypass__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>BypassAllTriggers__c</columns>
    <columns>BypassTriggers__c</columns>
    <columns>BypassValidationRules__c</columns>
    <columns>BypassWorkflowRules__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>